<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlipPhone</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Flip Phone</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_finish">Finish</string>
    <string name="title_activity_read">Meassures</string>
    <string name="title_result">Result</string>
    <string name="text_roll">Roll</string>
    <string name="text_pitch">Pitch</string>
    <string name="text_yaw">Yaw</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="empty_text">empty</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="counter_text">Counter</string>

</resources>
